RESOLVED FIXED23445
Copying certain hidden text causes a crash
https://bugs.webkit.org/show_bug.cgi?id=23445
Summary Copying certain hidden text causes a crash
Tom Robinson
Reported 2009-01-20 20:33:45 PST
1) Login to reddit.com and visit a comments page 2) Select the text of a comment 3) Click the "[-]" widget for the selected comment to hide it 4) Try to copy the hidden text via keyboard shortcut or menu Note this only works if you're logged into reddit.com
Attachments
patch (4.86 KB, patch)
2009-03-29 18:24 PDT, Darin Adler
mitz: review+
Mark Rowe (bdash)
Comment 1 2009-01-20 20:34:40 PST
Mark Rowe (bdash)
Comment 2 2009-03-05 19:15:13 PST
*** Bug 24414 has been marked as a duplicate of this bug. ***
Darin Adler
Comment 3 2009-03-29 17:21:11 PDT
Darn, I wanted to work on this bug, but I don't have a reddit.com account. I guess I'll have to make one.
Darin Adler
Comment 4 2009-03-29 17:39:02 PDT
There are two aspects to this bug: 1) When the end points of the range are no longer rendered due to display: none, it would be good to update the selection so it doesn't include the invisible stuff. 2) When we actually run the createMarkup algorithm it would be best not to crash. I have a fix for (2) done. Next I'll make a regression test. Then I'll fix (1) as well.
Darin Adler
Comment 5 2009-03-29 18:24:49 PDT
Darin Adler
Comment 6 2009-03-29 19:21:20 PDT
(In reply to comment #4) > 1) When the end points of the range are no longer rendered due to display: > none, it would be good to update the selection so it doesn't include the > invisible stuff. I decided not to fix this at this time. I'm not sure what behavior we want for this.
Darin Adler
Comment 7 2009-03-29 19:21:45 PDT
Note You need to log in before you can comment on or make changes to this bug.